# django-rest-psql-redis-template

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  ruff.toml
django_app/core/: settings.py  urls.py
scripts/: generate_token.py
