[project]
name = "django-rest-psql-redis-template"
version = "1.0.0"
description = "description"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.2",
    "psycopg2-binary==2.9.10",
    "uvicorn[standard]==0.38.0",
    "redis==6.0.0",
    "django-redis==5.4.0",
    "djangorestframework==3.16.0",
    "drf-spectacular==0.29.0",
    "django-cors-headers==4.9.0",
    "Faker==37.3.0",
    "python-dotenv==1.2.1"
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pre-commit>=3.7",
]
